<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/data_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text=""
        android:background="@color/white"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/result_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@color/white"
        android:text=""
        android:visibility="gone"
        android:textAlignment="viewEnd"
        android:textColor="#83ED09"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="#E4F3F4"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="#F8F9FB"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:id="@+id/btn_clear"
                android:backgroundTint="#FBF0F0"
                android:gravity="center"
                android:onClick="onclearClick"
                android:text="@string/C"
                android:textColor="#F44336" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="@style/operatorbutton"
                android:gravity="center"
                android:onClick="onbackClick"
                app:icon="@drawable/baseline_backspace_24"
                app:iconTint="@color/symbol" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_modulo"
                style="@style/operatorbutton"
                android:gravity="center"
                android:onClick="onoperatorClick"
                android:text="@string/mod" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                style="@style/operatorbutton"
                android:gravity="center"
                android:onClick="onoperatorClick"
                android:text="@string/divide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/digitbutton"
                android:gravity="center"
                android:onClick="onDigitClick"
                android:text="@string/num7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/digitbutton"
                android:gravity="center"
                android:onClick="onDigitClick"
                android:text="@string/num8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/digitbutton"
                android:gravity="center"
                android:onClick="onDigitClick"
                android:text="@string/num9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/operatorbutton"
                android:gravity="center"
                android:onClick="onoperatorClick"
                android:text="@string/star" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/digitbutton"
                android:gravity="center"
                android:onClick="onDigitClick"
                android:text="@string/num4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/digitbutton"
                android:gravity="center"
                android:onClick="onDigitClick"
                android:text="@string/num5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/digitbutton"
                android:gravity="center"
                android:onClick="onDigitClick"
                android:text="@string/num6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                style="@style/operatorbutton"
                android:gravity="center"
                android:onClick="onoperatorClick"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/digitbutton"
                android:gravity="center"
                android:onClick="onDigitClick"
                android:text="@string/num1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/digitbutton"
                android:gravity="center"
                android:onClick="onDigitClick"
                android:text="@string/num2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/digitbutton"
                android:gravity="center"
                android:onClick="onDigitClick"
                android:text="@string/num3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subtract"
                style="@style/operatorbutton"
                android:gravity="center"
                android:onClick="onoperatorClick"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_allclear"
                style="@style/operatorbutton"
                android:backgroundTint="#FBF0F0"
                android:gravity="center"
                android:onClick="onallclearClick"
                app:icon="@drawable/twotone_delete_24"
                app:iconSize="32dp"
                app:iconTint="#F44336" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/digitbutton"
                android:gravity="center"
                android:onClick="onDigitClick"
                android:text="@string/num0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/digitbutton"
                android:gravity="center"
                android:onClick="onDigitClick"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/equalbutton"
                android:gravity="center"
                android:onClick="onequalClick"
                android:text="@string/equal" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>